--- a/box.html
+++ b/box.html
@@ -14,9 +14,15 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit tempora sunt molestiae, qui aut cumque nostrum sit quae debitis ad magnam! Quidem fugiat totam numquam ratione non, voluptate quod quo.
             Ullam nam sunt, nihil veritatis facilis nemo magni cupiditate optio accusamus pariatur, rerum quidem fuga tenetur quasi, deleniti magnam vitae! Cumque corrupti non, omnis earum debitis praesentium inventore odit magni?</p>
          </div>
+
          <div class="second">
-          <div class="innersecond"></div>
+          <p style="padding-left: 10px;font-weight:bold;">this list is a box</p>
+          <div class="innersecond">
+            <div class="line"></div>
+            <p style="padding-top: 40px; padding-left: 10px; font-weight:bold;"> and the list item this list is a box</p>
+          </div>
          </div>
+        
        </div>
 </body>
 </html>
